--- a/index.html
+++ b/index.html
@@ -6,7 +6,97 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <h1>hello</h1>
+<body id="header_ani">
+    <!-- HEADER -->
+    <section>
+     <div class="header pagesBody">
+        <div class="header_main">
+            <a href="#"> <span><img src="img/logo.png" alt=""></span> </a>
+            <div class="header_main__nav">
+                <div class="header_main__nav__formargin">
+                    <a href="#"> <span>About us</span> </a>
+                    <a href="#"> <span>Types work</span></a>
+                    <a href="#"> <span>About PC</span></a>
+                    <a href="#"> <span>Contacts</span></a>
+                </div>
+            </div>
+            <div class="header_main__screen">
+                <div class="header_main__screen__left">
+                   <img src="img/hotpng.com.png" alt="">
+                </div>  
+                <form class="header_main__screen__right">
+                        <input type="text" required  placeholder="name">
+                        <input type="text" required  placeholder="mail">
+                        <input type="text" required  placeholder="phone*">
+                        <textarea name="asd" id="" cols="30" rows="10"></textarea>
+                        <button>PUSH</button>
+                </form>
+            </div>
+        </div>
+     </div>
+    </section>
+    <!-- HEADER -->
+
+    <!-- HEADER -->
+    <section>asd</section>
+    <!-- HEADER -->
+
+    <!-- HEADER -->
+    <section>asd</section>
+    <!-- HEADER -->
+
+    <!-- HEADER -->
+    <section>asd</section>
+    <!-- HEADER -->
+
+    <!-- HEADER -->
+    <section>asd</section>
+    <!-- HEADER -->
+
+    <!-- HEADER -->
+    <div id="qwe">asd</div>
+    <!-- HEADER -->
+
+
+<!--
+    ░░░░░░░░░░░░▄▀▀▀▀▀▀▀▀▄
+    ░░░░░█░░░░▒▒▒▒▒▒▒▒▒▒▒▒▀▀▄
+    ░░░░█░░░▒▒▒▒▒▒░░░░░░░░▒▒▒░█
+    ░░░█░░░░░░▄██▀▄▄░░░░░▄▄▄░░░█
+    ░▄▀▒▄▄▄▒░█▀▀▄▄█░░░██▄▄█░░░█
+    ...█░▒█▒▄░▀▄▄▄▀░░░░░░░░█░░░▒▒█
+    █░▒█░█▀▄▄░░░░░█▀░░░░▀▄░░▄▀▀▄▒█
+    ░█░▀▄░█▄░█▀▄▄░▀░▀▀░▄▄▀░░░░░█
+    ░░█░░░░██░░▀█▄▄▄█▄▄█▄████░█
+    ░░░█░░░░▀▀▄░█░░░█░█▀██████░█
+    ░░░░▀▄░░░░░▀▀▄▄▄█▄█▄█▄█▄▀░░█
+    ░░░░░░▀▄▄░▒▒▒▒░░░░░░░░░░▒░░░█
+    ░░░░░░░░░▀▀▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀
+  -->
+
+
+
+
+
+
+
+
+
+<script src="js/three.r119.min.js"></script>
+<script src="js/vanta.net.min.js"></script>
+<script>
+VANTA.NET({
+  el: "#header_ani",
+  mouseControls: true,
+  touchControls: true,
+  gyroControls: false,
+  minHeight: 200.00,
+  minWidth: 200.00,
+  scale: 1.00,
+  scaleMobile: 1.00,
+  color: 0xededed,
+  backgroundColor: 0xffffff
+})
+</script>
 </body>
 </html>
