--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body id="header_ani">
     <!-- HEADER -->
-    <section>
-     <div class="header pagesBody">
+    <section class="header">
+     <div class="pagesBody">
         <div class="header_main">
             <a href="#"> <span><img src="img/logo.png" alt=""></span> </a>
             <div class="header_main__nav">
@@ -33,20 +33,100 @@
                 </form>
             </div>
         </div>
+        <h1>SERWIS KOMPUTEROWY OZAROW MAZOWIECKI</h1>
      </div>
     </section>
     <!-- HEADER -->
 
-    <!-- HEADER -->
-    <section>asd</section>
-    <!-- HEADER -->
+    <!-- ABOUT -->
+    <section class="about">
+        <div class="pagesBody">
+             <h2>NAJCZESTSZE PROBLEMY UZYTKOWNIKOW</h2>
+        <div class="about_flex">
+            <div class="about_flex__first">
+                <img src="" alt="">
+            </div>
+            <div class="about_flex__second">
+                <img src="" alt="">
+            </div>
+            <div class="about_flex__third">
+                <img src="" alt="">
+            </div>
+            <div class="about_flex__four">
+                <img src="" alt="">
+            </div>
+            <div class="about_flex__five">
+                <img src="" alt="">
+            </div>
+            <div class="about_flex__six">
+                <img src="" alt="">
+            </div>
+        </div>
+    </div>
+    </section>
+    <!-- ABOUT -->
+
+    <!-- TYPEWORK -->
+    <section class="typeWork">
+        <div class="pagesBody">
+            <h2>MOJE USLUGI</h2>
+            <div class="typeWork_flex">
+                <div class="typeWork_flex__first"></div>
+                <div class="typeWork_flex__second"></div>
+                <div class="typeWork_flex__third"></div>
+            </div>
+        </div>
+    </section>
+    <!-- TYPEWORK -->
 
     <!-- HEADER -->
-    <section>asd</section>
-    <!-- HEADER -->
-
-    <!-- HEADER -->
-    <section>asd</section>
+    <section class="ac-container">
+     <div class="pagesBody">
+         <h2>CZESTO ZADAWANE PYTANIA</h2>
+        <div>
+            <input id="ac-1" name="accordion-1" type="radio" checked />
+            <label for="ac-1">О нас</label>
+            <article>
+                <p>Какой нибудь замечательный текст... </p>
+            </article>
+        </div>
+        <div>
+            <input id="ac-2" name="accordion-1" type="radio" />
+            <label for="ac-2">Услуги</label>
+            <article>
+                <p>Какой нибудь замечательный текст...</p>
+            </article>
+        </div>
+        <div>
+            <input id="ac-3" name="accordion-1" type="radio" />
+            <label for="ac-3">Портфолио</label>
+            <article>
+                <p>Какой нибудь замечательный текст...</p>
+            </article>
+        </div>
+        <div>
+            <input id="ac-4" name="accordion-1" type="radio" />
+            <label for="ac-4">Контакты</label>
+            <article>
+                <p>Какой нибудь замечательный текст...</p>
+            </article>
+        </div>
+        <div>
+            <input id="ac-5" name="accordion-1" type="radio" />
+            <label for="ac-5">Контакты</label>
+            <article>
+                <p>Какой нибудь замечательный текст...</p>
+            </article>
+        </div>
+        <div>
+            <input id="ac-6" name="accordion-1" type="radio" />
+            <label for="ac-6">Контакты</label>
+            <article>
+                <p>Какой нибудь замечательный текст...</p>
+            </article>
+        </div>
+     </div>
+    </section>
     <!-- HEADER -->
 
     <!-- HEADER -->
