--- a/index.html
+++ b/index.html
@@ -85,44 +85,44 @@
          <h2>CZESTO ZADAWANE PYTANIA</h2>
         <div>
             <input id="ac-1" name="accordion-1" type="radio" checked />
-            <label for="ac-1">О нас</label>
+            <label for="ac-1">bla bla</label>
             <article>
-                <p>Какой нибудь замечательный текст... </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor earum eligendi delectus! At, dicta et, officiis tenetur odio dolorem nesciunt sit dignissimos fugit reiciendis provident consequuntur sapiente voluptate? Officia, soluta?Officia mollitia delectus vel distinctio nesciunt odit modi, ea, necessitatibus in facilis labore eius dolorem nulla, similique assumenda alias consequuntur suscipit tempore ad sed quasi dolore illo. Beatae, provident alias. </p>
             </article>
         </div>
         <div>
             <input id="ac-2" name="accordion-1" type="radio" />
-            <label for="ac-2">Услуги</label>
+            <label for="ac-2">llalalala</label>
             <article>
-                <p>Какой нибудь замечательный текст...</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum eos at voluptatem dolores, commodi veniam iste vero iusto placeat id aliquam modi asperiores! Architecto perspiciatis atque officia cupiditate blanditiis dolore.Saepe dolore quidem vero illum excepturi, earum accusantium distinctio! Ratione quos molestiae ullam earum rem nostrum, ea, ab nihil, ad nemo voluptas maxime expedita. Distinctio dolorem vel libero consectetur officia?</p>
             </article>
         </div>
         <div>
             <input id="ac-3" name="accordion-1" type="radio" />
-            <label for="ac-3">Портфолио</label>
+            <label for="ac-3">cos tam bedzie</label>
             <article>
-                <p>Какой нибудь замечательный текст...</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis nam reprehenderit explicabo iusto consequatur qui quo nostrum non dolore quos ratione facilis inventore, illum alias ab pariatur adipisci harum eum!Quod eligendi porro ducimus soluta quam aperiam, voluptatem accusantium accusamus fugiat nulla iure ex labore aspernatur at molestiae consectetur id iusto reiciendis ea quas deserunt quo commodi voluptates? Quo, molestiae?</p>
             </article>
         </div>
         <div>
             <input id="ac-4" name="accordion-1" type="radio" />
-            <label for="ac-4">Контакты</label>
+            <label for="ac-4">moze nie</label>
             <article>
-                <p>Какой нибудь замечательный текст...</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum, voluptate quo provident ratione, aliquam adipisci ut in vel itaque laudantium necessitatibus id corporis qui fugiat soluta. Id, laborum soluta? Architecto.Maxime voluptatem quis officia magnam rem libero, vel explicabo mollitia. Aspernatur quae atque quas numquam nisi. Numquam quibusdam pariatur, ut debitis fuga illum fugit ea sunt itaque laboriosam, architecto totam?</p>
             </article>
         </div>
         <div>
             <input id="ac-5" name="accordion-1" type="radio" />
-            <label for="ac-5">Контакты</label>
+            <label for="ac-5">bla bla</label>
             <article>
-                <p>Какой нибудь замечательный текст...</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum, voluptate quo provident ratione, aliquam adipisci ut in vel itaque laudantium necessitatibus id corporis qui fugiat soluta. Id, laborum soluta? Architecto.Maxime voluptatem quis officia magnam rem libero, vel explicabo mollitia. Aspernatur quae atque quas numquam nisi. Numquam quibusdam pariatur, ut debitis fuga illum fugit ea sunt itaque laboriosam, architecto totam?</p>
             </article>
         </div>
         <div>
             <input id="ac-6" name="accordion-1" type="radio" />
-            <label for="ac-6">Контакты</label>
+            <label for="ac-6">jprd</label>
             <article>
-                <p>Какой нибудь замечательный текст...</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente tempora ducimus temporibus impedit, hic totam voluptas maxime perspiciatis, laboriosam architecto maiores officia, corrupti harum laudantium praesentium aperiam. Alias, consequatur corporis.Quos repudiandae sunt, nihil asperiores nobis neque. Beatae at cumque numquam ea aliquid voluptates ducimus vel tempora nostrum tenetur similique a unde facere voluptate sapiente animi ab, distinctio, eveniet quis.</p>
             </article>
         </div>
      </div>
