--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
     <!-- TYPEWORK -->
 
-    <!-- HEADER -->
+    <!-- ACCORDION -->
     <section class="ac-container">
      <div class="pagesBody">
          <h2>CZESTO ZADAWANE PYTANIA</h2>
@@ -127,15 +127,29 @@
         </div>
      </div>
     </section>
-    <!-- HEADER -->
+    <!-- ACCORDION -->
 
-    <!-- HEADER -->
-    <section>asd</section>
-    <!-- HEADER -->
+    <!-- KONTAKT -->
+    <section class="maps">
+     <div class="pagesBody">
+         <h2>KONTAKT</h2>
+         <div class="maps_flex">
+             <div class="maps_flex__leftSide">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2444.6631929762!2d20.795335715796!3d52.21316787975717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47194abdad670599%3A0xca54b1f4acd15ba4!2sRomana%20Dmowskiego%2010%2C%2005-850%20O%C5%BCar%C3%B3w%20Mazowiecki!5e0!3m2!1sru!2spl!4v1600426674213!5m2!1sru!2spl" width="600" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+             </div>
+             <div class="maps_flex__rightSide">
+                 kontakt
+             </div>
+             </div>
+         </div>
+        </section>
+    <!-- KONTAKT -->
 
-    <!-- HEADER -->
-    <div id="qwe">asd</div>
-    <!-- HEADER -->
+    <!-- FOOTER -->
+    <section class="footer">
+        asd
+    </section>
+    <!-- FOOTER -->
 
 
 <!--
