general page's concept is ready

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </form>
             </div>
         </div>
-        <h1>SERWIS KOMPUTEROWY OZAROW MAZOWIECKI</h1>
+        <div class="header_h1"> <h1>SERWIS KOMPUTEROWY OZAROW MAZOWIECKI</h1></div>
      </div>
     </section>
     <!-- HEADER -->
@@ -44,22 +44,70 @@
              <h2>NAJCZESTSZE PROBLEMY UZYTKOWNIKOW</h2>
         <div class="about_flex">
             <div class="about_flex__first">
-                <img src="" alt="">
+                <img src="img/2-1.jpg" alt="">
+                <h3>Problemy z uruchamianiem systemu i aplikacji </h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat velit facilis cumque. Ut reprehenderit est modi fugit at omnis vitae odit laborum vero, enim nihil nemo eaque ipsam a dolorem.</p>
+                <button class="learn-more">
+                    <span class="circle" aria-hidden="true">
+                      <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Learn More</span>
+                </button>
             </div>
             <div class="about_flex__second">
-                <img src="" alt="">
+                <img src="img/2-2.jpg" alt="">
+                <h3>Zle działący sprzęt komputerowy</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat velit facilis cumque. Ut reprehenderit est modi fugit at omnis vitae odit laborum vero, enim nihil nemo eaque ipsam a dolorem.</p>
+                                <button class="learn-more">
+                    <span class="circle" aria-hidden="true">
+                      <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Learn More</span>
+                </button>
             </div>
             <div class="about_flex__third">
-                <img src="" alt="">
+                <img src="img/2-3.jpg" alt="">
+                <h3>Mała ilość pamięci ram </h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat velit facilis cumque. Ut reprehenderit est modi fugit at omnis vitae odit laborum vero, enim nihil nemo eaque ipsam a dolorem.</p>
+                                <button class="learn-more">
+                    <span class="circle" aria-hidden="true">
+                      <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Learn More</span>
+                </button>
             </div>
             <div class="about_flex__four">
-                <img src="" alt="">
+                <img src="img/2-4.jpg" alt="">
+                <h3>Zła konfiguracja programu</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat velit facilis cumque. Ut reprehenderit est modi fugit at omnis vitae odit laborum vero, enim nihil nemo eaque ipsam a dolorem.</p>
+                                <button class="learn-more">
+                    <span class="circle" aria-hidden="true">
+                      <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Learn More</span>
+                </button>
             </div>
             <div class="about_flex__five">
-                <img src="" alt="">
+                <img src="img/2-5.jpg" alt="">
+                <h3>Niezainstalowane sterowniki w komputerze</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat velit facilis cumque. Ut reprehenderit est modi fugit at omnis vitae odit laborum vero, enim nihil nemo eaque ipsam a dolorem.</p>
+                                <button class="learn-more">
+                    <span class="circle" aria-hidden="true">
+                      <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Learn More</span>
+                </button>
             </div>
             <div class="about_flex__six">
-                <img src="" alt="">
+                <img src="img/2-6.jpg" alt="">
+                <h3>Duża ilość antywirusów na komputerze</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat velit facilis cumque. Ut reprehenderit est modi fugit at omnis vitae odit laborum vero, enim nihil nemo eaque ipsam a dolorem.</p>
+                                <button class="learn-more">
+                    <span class="circle" aria-hidden="true">
+                      <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Learn More</span>
+                </button>
             </div>
         </div>
     </div>
@@ -71,9 +119,21 @@
         <div class="pagesBody">
             <h2>MOJE USLUGI</h2>
             <div class="typeWork_flex">
-                <div class="typeWork_flex__first"></div>
-                <div class="typeWork_flex__second"></div>
-                <div class="typeWork_flex__third"></div>
+                <div class="typeWork_flex__first">
+                    <h3>Instalacja systemu komputerowego</h3>
+                    <img src="img/3-1.png" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam quaerat commodi aspernatur quo sit, repellat sapiente cumque id molestiae iure ratione pariatur animi ducimus, possimus voluptate quibusdam similique esse maiores.</p>
+                </div>
+                <div class="typeWork_flex__second">
+                    <h3>Konfiguracja komputera i sieci komputerowej</h3>
+                    <img src="img/3-2.png" alt="">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem, delectus! Quaerat nostrum deserunt consectetur temporibus nihil magni doloremque architecto ad, modi vel culpa placeat, harum impedit voluptate? Sit, tempore harum!</p>
+                </div>
+                <div class="typeWork_flex__third">
+                    <h3>Pomoc w doborze komputerów\Laptopów i dalsza modernizacja</h3>
+                    <img src="img/3-3.png" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis asperiores unde velit non id excepturi natus ducimus voluptate veritatis vel! Ipsam repellendus quasi distinctio excepturi. Impedit quibusdam fuga quod possimus!</p>
+                </div>
             </div>
         </div>
     </section>
@@ -130,14 +190,14 @@
     <!-- ACCORDION -->
 
     <!-- KONTAKT -->
-    <section class="maps">
+    <section class="contact">
      <div class="pagesBody">
          <h2>KONTAKT</h2>
-         <div class="maps_flex">
-             <div class="maps_flex__leftSide">
+         <div class="contact_flex">
+             <div class="contact_flex__leftSide">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2444.6631929762!2d20.795335715796!3d52.21316787975717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47194abdad670599%3A0xca54b1f4acd15ba4!2sRomana%20Dmowskiego%2010%2C%2005-850%20O%C5%BCar%C3%B3w%20Mazowiecki!5e0!3m2!1sru!2spl!4v1600426674213!5m2!1sru!2spl" width="600" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
              </div>
-             <div class="maps_flex__rightSide">
+             <div class="contact_flex__rightSide">
                  kontakt
              </div>
              </div>
