--- a/index.html
+++ b/index.html
@@ -195,10 +195,15 @@
          <h2>KONTAKT</h2>
          <div class="contact_flex">
              <div class="contact_flex__leftSide">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2444.6631929762!2d20.795335715796!3d52.21316787975717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47194abdad670599%3A0xca54b1f4acd15ba4!2sRomana%20Dmowskiego%2010%2C%2005-850%20O%C5%BCar%C3%B3w%20Mazowiecki!5e0!3m2!1sru!2spl!4v1600426674213!5m2!1sru!2spl" width="600" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-             </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4889.326372717845!2d20.797524!3d52.213168!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47194abdad670599%3A0xca54b1f4acd15ba4!2sRomana%20Dmowskiego%2010%2C%2005-850%20O%C5%BCar%C3%B3w%20Mazowiecki!5e0!3m2!1sru!2spl!4v1600514546376!5m2!1sru!2spl" width="600" height="460" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>             </div>
              <div class="contact_flex__rightSide">
-                 kontakt
+                <form class="contact_flex__rightSide__form">
+                    <input type="text" required  placeholder="name">
+                    <input type="text" required  placeholder="mail">
+                    <input type="text" required  placeholder="phone*">
+                    <textarea name="asd" id="" cols="30" rows="10"></textarea>
+                    <button>PUSH</button>
+            </form>
              </div>
              </div>
          </div>
@@ -207,7 +212,7 @@
 
     <!-- FOOTER -->
     <section class="footer">
-        asd
+        
     </section>
     <!-- FOOTER -->
 
