page's structure is ready

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="Serwis komputerowy ozarow mazowiecki, robie szybko, dobrze i z gwarancja!">
 </head>
 <body id="header_ani">
     <!-- HEADER -->
@@ -212,7 +213,30 @@
 
     <!-- FOOTER -->
     <section class="footer">
-        
+        <div class="pagesBody">
+        <div class="footer_info">
+            <h4>Tutaj sa moje dane kontaktowe.</h4>
+            <div class="footer_info__tel">
+                <img src="img/5-1.png" alt="">
+                <span>+48 782 423 123</span>
+            </div>
+            <div class="footer_info__mail">
+                <img src="img/5-2.png" alt="">
+                <span>tomek@gmail.com</span>
+            </div>
+            <div class="footer_info__fb">
+                <img src="img/5-3.png" alt="">
+                <span>link_fb.com</span>
+            </div>
+        </div>
+        <div class="footer_copywrite">
+            <p>Serwis komputerowy Ozarow Mazowiecki</p>
+            <p>Romana Dmowskiego 10</p>
+            <p>Romana Dmowskiego 10, 05-850</p>
+            <p>Ożarów Mazowiecki</p>
+            <!-- <p>copywrite 2020, Warszawa, Aleh Zahorski.</p> -->
+        </div>
+    </div>
     </section>
     <!-- FOOTER -->
 
@@ -245,7 +269,7 @@
 <script src="js/vanta.net.min.js"></script>
 <script>
 VANTA.NET({
-  el: "#header_ani",
+  el: "#header_ani", 
   mouseControls: true,
   touchControls: true,
   gyroControls: false,
