--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <a href="#"> <span><img src="img/logo.png" alt=""></span> </a>
             <div class="header_main__nav">
                 <div class="header_main__nav__formargin">
-                    <a href="#"> <span>About us</span> </a>
-                    <a href="#"> <span>Types work</span></a>
-                    <a href="#"> <span>About PC</span></a>
-                    <a href="#"> <span>Contacts</span></a>
+                    <a href="#"> <span>Pomoc</span> </a>
+                    <a href="#"> <span>Moje uslugi</span></a>
+                    <a href="#"> <span>Pytania</span></a>
+                    <a href="#"> <span>Kontakt</span></a>
                 </div>
             </div>
             <div class="header_main__screen">
