--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <input type="text" name="Name" required  placeholder="name">
                         <input type="text" name="E-mail" required  placeholder="mail">
                         <input type="text" name="Phone" required  placeholder="phone*">
-                        <textarea name="asd" id="" cols="30" rows="10"></textarea>
+                        <textarea name="Message" value="Message" id="" cols="30" rows="10"></textarea>
                         <button>SEND</button>
                 </form>
             </div>
@@ -226,7 +226,7 @@
                      <input type="text" name="Name" required  placeholder="name">
                      <input type="text" name="E-mail" required  placeholder="mail">
                      <input type="text" name="Phone" required  placeholder="phone*">
-                     <textarea name="asd" id="" cols="30" rows="10"></textarea>
+                     <textarea name="Message" id="" cols="30" rows="10"></textarea>
                     <button>PUSH</button>
             </form>
              </div>
